Closed Bug 1872232 Opened 2 years ago Closed 2 years ago

Crash in [@ nsOfflineStoreCompactState::OnStopRequest]

Categories

(Thunderbird :: General, defect)

Thunderbird 122
Unspecified
Windows 11
defect

Tracking

(thunderbird_esr115 unaffected, thunderbird122 verified)

VERIFIED FIXED
123 Branch
Tracking Status
thunderbird_esr115 --- unaffected
thunderbird122 --- verified

People

(Reporter: wsmwk, Assigned: mkmelin)

References

(Regression)

Details

(Keywords: crash, regression, topcrash-thunderbird)

Crash Data

Attachments

(1 file)

#1 crash for 122.0b1
Crash report: https://crash-stats.mozilla.org/report/index/e0fd016f-9a96-4b53-b761-4464b0231227

Reason: EXCEPTION_ACCESS_VIOLATION_READ

Top 10 frames of crashing thread:

0  xul.dll  nsOfflineStoreCompactState::OnStopRequest  mailnews/base/src/nsMsgFolderCompactor.cpp:993
1  xul.dll  nsImapMockChannel::RunOnStopRequestFailure  mailnews/imap/src/nsImapProtocol.cpp:9368
1  xul.dll  nsReadFromImapConnectionFailure::Run  mailnews/imap/src/nsImapProtocol.cpp:9357
2  xul.dll  mozilla::RunnableTask::Run  xpcom/threads/TaskController.cpp:549
3  xul.dll  mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal  xpcom/threads/TaskController.cpp:876
4  xul.dll  mozilla::TaskController::ExecuteNextTaskOnlyMainThreadInternal  xpcom/threads/TaskController.cpp:699
5  xul.dll  mozilla::TaskController::ProcessPendingMTTask  xpcom/threads/TaskController.cpp:485
6  xul.dll  mozilla::TaskController::TaskController::<lambda_4>::operator const  xpcom/threads/TaskController.cpp:211
6  xul.dll  mozilla::detail::RunnableFunction<`lambda at /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:211:7'>::Run  xpcom/threads/nsThreadUtils.h:548
7  xul.dll  nsThread::ProcessNextEvent  xpcom/threads/nsThread.cpp:1199
Flags: needinfo?(mkmelin+mozilla)
Assignee: nobody → mkmelin+mozilla
Status: NEW → ASSIGNED
Version: unspecified → Thunderbird 122
Attachment #9370696 - Attachment description: Bug 1872232 - Fix crash in [@ nsOfflineStoreCompactState::OnStopRequest]. r=BenC → Bug 1872232 - Fix crash in [@ nsOfflineStoreCompactState::OnStopRequest]. r=babolivier
Target Milestone: --- → 123 Branch

Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/d0e8f88c98a0
Fix crash in [@ nsOfflineStoreCompactState::OnStopRequest]. r=babolivier

Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED

good for beta?

Flags: needinfo?(mkmelin+mozilla)

Comment on attachment 9370696 [details]
Bug 1872232 - Fix crash in [@ nsOfflineStoreCompactState::OnStopRequest]. r=babolivier

Should be good yes

Flags: needinfo?(mkmelin+mozilla)
Attachment #9370696 - Flags: approval-comm-beta?

Comment on attachment 9370696 [details]
Bug 1872232 - Fix crash in [@ nsOfflineStoreCompactState::OnStopRequest]. r=babolivier

[Triage Comment]
Approved for beta

Attachment #9370696 - Flags: approval-comm-beta? → approval-comm-beta+

This appears to be fixed in both beta and nightly

Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: