Bug 1872232 - Fix crash in [@ nsOfflineStoreCompactState::OnStopRequest]. r=babolivier

Differential Revision: https://phabricator.services.mozilla.com/D197491

--HG--
extra : rebase_source : da0de97d57dae2faa16a21f6aabb71514e9c6242